# NeuroFlow

./: .gitignore  ANALYTICS_DESKTOP_SETUP.md  DESKTOP_ANALYTICS_CHANGES.md  Dockerfile  LICENSE  QUICKSTART_DESKTOP_ANALYTICS.md  README.md  app.py  db_setup.py  docker-compose.yml  prompt.txt  pyproject.toml  requirements.txt  run_all_tests.py  run_desktop.py  run_web.py  schema.sql  smoke_auth_test.py  smoke_desktop_startup_test.py
Template/: Dashboard.html  Login.html  Onboarding.html  Signup.html
Template/css/: style.css
Template/js/: APP.js  onboarding.js
nginx/: nginx.conf
scripts/: __init__.py  build_windows.ps1
scripts/runtime/: __init__.py
src/: __init__.py  app_factory.py  config.py  constants.py  desktop_launcher.py  logging_config.py
src/services/: __init__.py  analytics_store.py  chatbot.py  db_setup.py  task_store.py
tests/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_analytics.py  test_chatbot.py  test_config.py  test_db_setup.py  test_desktop_launcher.py  test_task_store.py
